# aiap23-BIAN-SISHENG-819G

./: config.yml  configs.yml  eda.ipynb  main.py  pyproject.toml
data/: online_shopping_meta.json
src/: model.py  preprocess.py  preprocessing.py  utils.py
